Problemes de dependències amb el Client de CXF del Plugin de Firma en Servidor @firmaserver en el JBoss 7.2 #703